fix version mobile

--- a/bc0/style.css
+++ b/bc0/style.css
@@ -109,7 +109,7 @@ background-color: violet;
     justify-content: center;
     align-items: center;
 width: 100%;
-height: 150px;
+height: 120px;
 background-color: black;
 border-top: 1px solid red;
 }
@@ -120,7 +120,12 @@ border-top: 1px solid red;
 }
 
 
-@media(max-width: 425px) {
+@media(max-width: 525px) {
+    .footer{
+        height: 60px;
+        position: fixed;
+        bottom: 0;
+    }
     .container{
         width: 100vw;
         height: 100vh;
@@ -152,11 +157,8 @@ border-top: 1px solid red;
     }
     .footer p{
         font-size: 10px;
+        margin: 5px;
     
     }
-    .footer{
-        height: 60px;
-        position: fixed;
-        bottom: 0;
-    }
+  
    }
